--- a/day-1/Cargo.toml
+++ b/day-1/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "advent-of-code-2022"
+name = "day-1"
 version = "0.1.0"
 authors = ["Zane Purvis <zane.purvis@gmail.com>"]
 edition = "2018"
@@ -7,8 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[workspace]
-members = [
-    "day-1"
-]
